--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "https://hgv523.github.io/UNCC/"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "gf_profile.jpg"
+  avatar           : "gf_profile2.jpg"
   name             : "Gongfan Chen" 
   bio              : "Assistannt Professor"
   location         : "Charlotte, NC"
