--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "gf_profile2.jpg"
   name             : "Gongfan Chen" 
-  bio              : "Assistant Professor at the Department of Engineering Technology & Construction Management"
+  bio              : "Incmoing Assistant Professor at the Department of Engineering Technology & Construction Management"
   location         : "Charlotte, NC"
   employer         : "UNC at Charlotte"
   uri              : # URL
