--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,9 @@ author:
   bio              : "Incmoing Assistant Professor at the Department of Engineering Technology & Construction Management"
   location         : "Charlotte, NC"
   employer         : "UNC at Charlotte"
-  uri              : # URL
-  email            : "gchen12@charlotte.edu" 
+  uri              : files/Gongfan Chen-Curriculum Vitae.pdf
+  email            : "gchen12@charlotte.edu"
+  
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -58,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "linkedin.com/in/gongfan-chen"
+  linkedin         : "gongfan-chen"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
