--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Incmoing Assistant Professor at the Department of Engineering Technology & Construction Management"
   location         : "Charlotte, NC"
   employer         : "UNC at Charlotte"
-  uri              : files/Gongfan Chen-Curriculum Vitae.pdf
+  uri              : #files/Gongfan Chen-Curriculum Vitae.pdf
   email            : "gchen12@charlotte.edu"
   
 
