--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Construction Human-centric Automation & Technology (
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://hgv523.github.io/UNCC/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://hgv523.github.io/UNCC # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://hgv523.github.io/UNCC/"
+repository               : "https://hgv523.github.io/UNCC"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "gf_profile2.jpg"
   name             : "Gongfan Chen" 
-  bio              : "Incmoing Assistant Professor at the Department of Engineering Technology & Construction Management"
+  bio              : "Incoming Assistant Professor at the Department of Engineering Technology & Construction Management"
   location         : "Charlotte, NC"
   employer         : "UNC at Charlotte"
   uri              : #files/Gongfan Chen-Curriculum Vitae.pdf
