--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Construction Human-centric Automation & Technology (
 title_separator          : "-"
 name                     : &name "Gongfan Chen"
 description              : &description "personal description"
-url                      : https://hgv523.github.io/UNCC # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://hgv523.github.io/chatlab # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://hgv523.github.io/UNCC"
+repository               : "https://hgv523.github.io/chatlab"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
